--- a/Resources/translations/messages.ar.yml
+++ b/Resources/translations/messages.ar.yml
@@ -1,20 +1,24 @@
-ali:
+datatable:
     common:
-        confirm_delete: 'هل أنت متأكد من حذف هذا البند؟'
-        delete: حذف
-        edit: تحرير
-        no_action: "(لا يمكن إزالة)"
-        sProcessing: "...جاري التحميل"
-        sLengthMenu: "أظهر مُدخلات _MENU_"
-        sZeroRecords: "لم يُعثر على أية سجلات"
-        sInfo: "إظهار _START_ إلى _END_ من أصل _TOTAL_ مُدخل"
-        sInfoEmpty: "يعرض 0 إلى 0 من أصل 0 سجلّ"
-        sInfoFiltered: "(منتقاة من مجموع _MAX_ مُدخل)"
-        sInfoPostFix: ""
-        sSearch: "ابحث:"
-        sLoadingRecords: ""
-        sFirst: "الأول"
-        sPrevious: "السابق"
-        sNext: "التالي"
-        sLast: "الأخير"
-        search: "بحث"
+        are_you_sure: 'هل أنت متأكد ؟'
+        you_need_to_select_at_least_one_element: 'تحتاج إلى تحديد عنصر واحد على الأقل.'
+        search: 'بحث'
+        execute: تنفيذ
+        ok: حسنا
+    datatable:
+        processing:   "جاري التحميل..."
+        lengthMenu:   "أظهر مُدخلات _MENU_"
+        zeroRecords:  "لم يُعثر على أية سجلات"
+        info:         "إظهار _START_ إلى _END_ من أصل _TOTAL_ مُدخل"
+        infoEmpty:    "يعرض 0 إلى 0 من أصل 0 سجلّ"
+        infoFiltered: "(منتقاة من مجموع _MAX_ مُدخل)"
+        infoPostFix:  ""
+        search:       "ابحث:"
+        paginate:
+            first:    "الأول"
+            previous: "السابق"
+            next:     "التالي"
+            last:     "الأخير"
+        aria:
+            sortAscending:  "تفعيل لفرز العمود تصاعدي"
+            sortDescending: "تفعيل لفرز العمود الهابطة"
