--- a/Resources/translations/messages.de.yml
+++ b/Resources/translations/messages.de.yml
@@ -1,20 +1,27 @@
-ali:
+datatable:
     common:
-        confirm_delete: "Möchten Sie diesen Eintrag wirklich löschen?"
-        delete: löschen
-        edit: editieren
-        no_action: "(kann nicht löschen)"
-        sProcessing: "Bearbeite..."
-        sLengthMenu: "Zeige _MENU_ Einträge"
-        sZeroRecords: "Kein Eintrag gefunden"
-        sInfo: "Zeige _START_ bis _END_ von _TOTAL_ Einträgen"
-        sInfoEmpty: "Zeige 0 bis 0 von 0 Einträgen"
-        sInfoFiltered: "(gefiltert von _MAX_ Einträgen)"
-        sInfoPostFix: ""
-        sSearch: "Suchen:"
-        sLoadingRecords: "Ein Moment Geduld..."
-        sFirst: "Erste"
-        sPrevious: "Vorrige"
-        sNext: "Folgende"
-        sLast: "Letzte"
-        search: "suchen"
+        are_you_sure: "Bist du sicher ?"
+        you_need_to_select_at_least_one_element: "Sie müssen mindestens ein Element auswählen."
+        search: Zoeken
+        execute: "Ausführen"
+        ok: "OK"
+    datatable:
+        emptyTable:     "Geen resultaten aanwezig in de tabel"
+        info:           "_START_ tot _END_ van _TOTAL_ resultaten"
+        infoEmpty:      "Geen resultaten om weer te geven"
+        infoFiltered:   " (gefilterd uit _MAX_ resultaten)"
+        infoPostFix:    ""
+        infoThousands:  "."
+        lengthMenu:     "_MENU_ resultaten weergeven"
+        loadingRecords: "Een moment geduld aub - bezig met laden..."
+        processing:     "Bezig..."
+        search:         "Zoeken:"
+        zeroRecords:    "Geen resultaten gevonden"
+        paginate:
+            first:    "Eerste"
+            last:     "Laatste"
+            next:     "Volgende"
+            previous: "Vorige"
+        aria:
+            sortAscending:  ": zu aktivieren, um Spalte aufsteigend zu sortieren"
+            sortDescending: ": zu aktivieren, um Spalte absteigend sortieren"
