--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,22 +1,28 @@
-ali:
+datatable:
     common:
         are_you_sure: Are you sure ?
         you_need_to_select_at_least_one_element: You need to select at least one element.
-        confirm_delete: "Are you sure to delete this item ?"
-        delete: delete
-        edit: edit
-        no_action: "(can't remove)"
-        sProcessing: "Processing..."
-        sLengthMenu: "Show _MENU_ entries"
-        sZeroRecords: "No matching records found"
-        sInfo: "Showing _START_ to _END_ of _TOTAL_ entries"
-        sInfoEmpty: "Showing 0 to 0 of 0 entries"
-        sInfoFiltered: "(filtered from _MAX_ total entries)"
-        sInfoPostFix: ""
-        sSearch: "Search:"
-        sLoadingRecords: ""
-        sFirst: "First"
-        sPrevious: "Previous"
-        sNext: "Next"
-        sLast: "Last"
-        search: "Search"
+        search: Search
+        execute: Execute
+        ok: OK
+    datatable:
+        emptyTable:     "No data available in table"
+        info:           "Showing _START_ to _END_ of _TOTAL_ entries"
+        infoEmpty:      "Showing 0 to 0 of 0 entries"
+        infoFiltered:   "(filtered from _MAX_ total entries)"
+        infoPostFix:    ""
+        infoThousands:  ","
+        lengthMenu:     "Show _MENU_ entries"
+        loadingRecords: "Loading..."
+        processing:     "Processing..."
+        search:         "Search:"
+        zeroRecords:    "No matching records found"
+        paginate:
+            first:    "First"
+            last:     "Last"
+            next:     "Next"
+            previous: "Previous"
+        aria:
+            sortAscending:  ": activate to sort column ascending"
+            sortDescending: ": activate to sort column descending"
+
