--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -1,21 +1,27 @@
-ali:
+datatable:
     common:
-        confirm_delete: "Êtes-vous sûr de vouloir supprimer cet élément ?"
-        delete: supprimer
-        edit: modifier
-        no_action: "-"
-        sProcessing: "Traitement en cours..."
-        sLengthMenu: "Afficher _MENU_ éléments"
-        sZeroRecords: "Aucun élément à afficher"
-        sInfo: "Affichage de l'élément _START_ à _END_ sur _TOTAL_ éléments"
-        sInfoEmpty: "Affichage de l'élement 0 à 0 sur 0 éléments"
-        sInfoFiltered: "(filtré de _MAX_ éléments au total)"
-        sInfoPostFix: ""
-        sSearch: "Rechercher:"
-        sLoadingRecords: "Téléchargement..."
-        sFirst: "Premier"
-        sPrevious: "Précédent"
-        sNext: "Suivant"
-        sLast: "Dernier"
-        search: "rechercher"
-
+        are_you_sure: Êtes-vous sûr ?
+        you_need_to_select_at_least_one_element: Vous devez sélectionner au moins un élément.
+        search: Rechercher
+        execute: Exécuter
+        ok: OK
+    datatable:
+        processing:     "Traitement en cours..."
+        search:         "Rechercher&nbsp;:"
+        lengthMenu:     "Afficher _MENU_ &eacute;l&eacute;ments"
+        info:           "Affichage de l'&eacute;l&eacute;ment _START_ &agrave; _END_ sur _TOTAL_ &eacute;l&eacute;ments"
+        infoEmpty:      "Affichage de l'&eacute;l&eacute;ment 0 &agrave; 0 sur 0 &eacute;l&eacute;ments"
+        infoFiltered:   "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)"
+        infoPostFix:    ""
+        infoThousands:  "."
+        loadingRecords: "Chargement en cours..."
+        zeroRecords:    "Aucun &eacute;l&eacute;ment &agrave; afficher"
+        emptyTable:     "Aucune donn&eacute;e disponible dans le tableau"
+        paginate:
+            first:      "Premier"
+            previous:   "Pr&eacute;c&eacute;dent"
+            next:       "Suivant"
+            last:       "Dernier"
+        aria:
+            sortAscending:  ": activer pour trier la colonne par ordre croissant"
+            sortDescending: ": activer pour trier la colonne par ordre d&eacute;croissant"
