--- a/Resources/translations/messages.ru.yml
+++ b/Resources/translations/messages.ru.yml
@@ -1,19 +1,27 @@
-ali:
+datatable:
     common:
-        confirm_delete: "Вы действительно хотите удалить этот элемент?"
-        delete: удалять
-        edit: редактировать
-        no_action: "(Не удается удалить)"
-        sProcessing:   "Подождите..."
-        sLengthMenu:   "Показать _MENU_ записей"
-        sZeroRecords:  "Записи отсутствуют."
-        sInfo:         "Записи с _START_ до _END_ из _TOTAL_ записей"
-        sInfoEmpty:    "Записи с 0 до 0 из 0 записей"
-        sInfoFiltered: "(отфильтровано из _MAX_ записей)"
-        sInfoPostFix:  ""
-        sSearch:       "Поиск:"
-        sFirst: "Первая"
-        sPrevious: "Предыдущая"
-        sNext: "Следующая"
-        sLast: "Последняя"
-        search: "поиск"
+        are_you_sure: Вы уверены ?
+        you_need_to_select_at_least_one_element: Вы должны выбрать хотя бы один элемент.
+        search: Поиск
+        execute: "выполнять"
+        ok: "OK"
+    datatable:
+        emptyTable:     "В таблице отсутствуют данные"
+        info:           "Записи с _START_ до _END_ из _TOTAL_ записей"
+        infoEmpty:      "Записи с 0 до 0 из 0 записей"
+        infoFiltered:   "(отфильтровано из _MAX_ записей)"
+        infoPostFix:    ""
+        infoThousands:  ","
+        lengthMenu:     "Показать _MENU_ записей"
+        loadingRecords: "Загрузка записей..."
+        processing:     "Подождите..."
+        search:         "Поиск:"
+        zeroRecords:    "Записи отсутствуют."
+        paginate:
+            first:    "Первая"
+            last:     "Последняя"
+            next:     "Следующая"
+            previous: "Предыдущая"
+        aria:
+            sortAscending:  ": активировать для сортировки столбца по возрастанию"
+            sortDescending: ": активировать для сортировки столбца по убыванию"
