--- a/Resources/translations/messages.ua.yml
+++ b/Resources/translations/messages.ua.yml
@@ -1,19 +1,27 @@
-ali:
+datatable:
     common:
-        confirm_delete: "Ви дійсно бажаєте видалити цей елемент?"
-        delete: видалити
-        edit: редагувати
-        no_action: "(Не вдається видалити)"
-        sProcessing:   "Почекайте..."
-        sLengthMenu:   "Показати _MENU_ записів"
-        sZeroRecords:  "Записи відсутні."
-        sInfo:         "Записи від _START_ до _END_ з _TOTAL_ записів"
-        sInfoEmpty:    "Записи від 0 до 0 з 0 записів"
-        sInfoFiltered: "(відфільтровано з _MAX_ записів)"
-        sInfoPostFix:  ""
-        sSearch:       "Пошук:"
-        sFirst: "Перша"
-        sPrevious: "Попередня"
-        sNext: "Наступна"
-        sLast: "Остання"
-        search: "пошук"
+        are_you_sure: Ти впевнений ?
+        you_need_to_select_at_least_one_element: Ви повинні вибрати хоча б один елемент.
+        search: Пошук
+        execute: "виконувати"
+        ok: "OK"
+    datatable:
+        emptyTable:     ""
+        info:           "Записи з _START_ по _END_ із _TOTAL_ записів"
+        infoEmpty:      "Записи з 0 по 0 із 0 записів"
+        infoFiltered:   "(відфільтровано з _MAX_ записів)"
+        infoPostFix:    ""
+        infoThousands:  ","
+        lengthMenu:     "Показати _MENU_ записів"
+        loadingRecords: ""
+        processing:     "Зачекайте..."
+        search:         "Пошук:"
+        zeroRecords:    "Записи відсутні."
+        paginate:
+            first:    "Перша"
+            last:     "Остання"
+            next:     "Наступна"
+            previous: "Попередня"
+        aria:
+            sortAscending:  ": активувати для сортування стовпців за зростанням"
+            sortDescending: ": активувати для сортування стовпців за спаданням"
