Add the ability to change only one translation string

--- a/Resources/translations/messages.ar.yml
+++ b/Resources/translations/messages.ar.yml
@@ -6,6 +6,7 @@ datatable:
         execute: تنفيذ
         ok: حسنا
     datatable:
+        searchPlaceholder: ""
         processing:   "جاري التحميل..."
         lengthMenu:   "أظهر مُدخلات _MENU_"
         zeroRecords:  "لم يُعثر على أية سجلات"
