--- a/Resources/translations/messages.es.yml
+++ b/Resources/translations/messages.es.yml
@@ -6,6 +6,7 @@ datatable:
         execute: ""
         ok: "OK"
     datatable:
+        searchPlaceholder: ""
         emptyTable:     "Ningún dato disponible en esta tabla"
         info:           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros"
         infoEmpty:      "Mostrando registros del 0 al 0 de un total de 0 registros"
