--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -6,6 +6,7 @@ datatable:
         execute: Execute
         ok: OK
     datatable:
+        searchPlaceholder: ""
         emptyTable:     "No data available in table"
         info:           "Showing _START_ to _END_ of _TOTAL_ entries"
         infoEmpty:      "Showing 0 to 0 of 0 entries"
